# Pentago

./: CMakeLists.txt  README.md  fifo.c  fifo.h  game_board.c  gamecomp.h  logic.c  main.c  win-fifo.c
